forgot-password design

--- a/Mifalot-app/src/app/pages/forgot-password/forgot-password.component.html
+++ b/Mifalot-app/src/app/pages/forgot-password/forgot-password.component.html
@@ -14,9 +14,8 @@
 <div class = "modal-dialog">
   <div class = "forgotpasswordrmodal-container">
     <h1> איפוס סיסמה </h1>
-
-    <br>
-
+    <h4> יש להזין את כתובת הדוא"ל איתה נרשמת לאפליקציה על מנת לאפס את סיסמתך</h4>
+   <hr>
     <form class = "form-signin" (submit) = "sendEmail($event, email.value)">
 
       <!-- Email -->
@@ -29,7 +28,7 @@
       <br>
       
       <!-- Sign up button -->
-      <button class = "btn btn-md btn-success btn-block" type = "submit"> שלח מייל לאיפוס סיסמה </button>
+      <button class = "btn btn-md btn-success btn-block" type = "submit"> איפוס סיסמה </button>
 
     </form>
 
