--- a/Mifalot-app/src/app/pages/forgot-password/forgot-password.component.css
+++ b/Mifalot-app/src/app/pages/forgot-password/forgot-password.component.css
@@ -15,12 +15,16 @@
     transform: translate(-50%, -50%);
 }
 
-h1 
+h1, h4
 {
     text-align: center;
-    font-size: 1.8em;
     font-family: roboto;
     color: white;
+}
+
+h1
+{
+    font-size: 1.8em;
 }
 
 input
