--- a/Mifalot-app/src/app/pages/forgot-password/forgot-password.component.html
+++ b/Mifalot-app/src/app/pages/forgot-password/forgot-password.component.html
@@ -12,10 +12,13 @@
 <!-- Forgot password form -->
 
 <div class = "modal-dialog">
-  <div class = "forgotpasswordrmodal-container">
+  <div *ngIf = "!showMessage" class = "forgotpasswordrmodal-container">
+
     <h1> איפוס סיסמה </h1>
     <h4> יש להזין את כתובת הדוא"ל איתה נרשמת לאפליקציה על מנת לאפס את סיסמתך</h4>
-   <hr>
+    
+    <hr>
+    
     <form class = "form-signin" (submit) = "sendEmail($event, email.value)">
 
       <!-- Email -->
@@ -40,3 +43,12 @@
   </div>
 </div>
 <!-- /Register form -->
+<!-- =========================================================================================================================== -->
+<!-- Show message -->
+
+<div *ngIf = "showMessage" class = "container message">
+  <div class = "panel panel-warning text-right center">
+    <div class = "panel-heading"> איפוס סיסמה <i class = "fa fa-envelop fa-2x pull-left" aria-hidden = "true"></i> </div>
+    <div class = "panel-body"> .מייל נשלח לדוא"ל שהזנת, אנא בדוק את תיבת הדואר הנכנס ואפס את סיסמתך באמצעות הקישור המצורף<br> הנך מועבר לעמוד ההתחברות </div>
+  </div>
+</div>
