--- a/Mifalot-app/src/app/_animations/spinner/spinner.component.css
+++ b/Mifalot-app/src/app/_animations/spinner/spinner.component.css
@@ -7,22 +7,24 @@
 .loader, .loader:after 
 {
     border-radius: 50%;
-    width: 7em;
-    height: 7em;
+    width: 5em;
+    height: 5em;
 }
 
 .loader 
 {
     z-index: 99;
-    margin: 80% auto;
+    position: absolute;
+    top: 45%;
+    left: 45%;
     font-size: 10px;
-    position: relative;
+ 
     text-indent: -9999em;
     direction: ltr;
-    border-top: 1.1em solid rgba(255, 255, 255, 0.2);
-    border-right: 1.1em solid rgba(255, 255, 255, 0.2);
-    border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
-    border-left: 1.1em solid #ffffff;
+    border-top: 1em solid rgba(255, 255, 255, 0.2);
+    border-right: 1em solid rgba(255, 255, 255, 0.2);
+    border-bottom: 1em solid rgba(255, 255, 255, 0.2);
+    border-left: 1em solid #ffffff;
     -webkit-transform: translateZ(0);
     -moz-transform: translateZ(0);
     -o-transform: translateZ(0);
