--- a/Mifalot-app/src/app/pages/forgot-password/forgot-password.component.html
+++ b/Mifalot-app/src/app/pages/forgot-password/forgot-password.component.html
@@ -15,7 +15,7 @@
   <div *ngIf = "!showMessage" class = "forgotpasswordrmodal-container">
 
     <h1> איפוס סיסמה </h1>
-    <h4> יש להזין את כתובת הדוא"ל איתה נרשמת לאפליקציה על מנת לאפס את סיסמתך</h4>
+    <h5> יש להזין את כתובת הדוא"ל איתה נרשמת לאפליקציה על מנת לאפס את סיסמתך</h5>
     
     <hr>
     
@@ -42,13 +42,22 @@
 
   </div>
 </div>
+
 <!-- /Register form -->
 <!-- =========================================================================================================================== -->
 <!-- Show message -->
-
-<div *ngIf = "showMessage" class = "container message">
-  <div class = "panel panel-warning text-right center">
-    <div class = "panel-heading"> איפוס סיסמה <i class = "fa fa-envelop fa-2x pull-left" aria-hidden = "true"></i> </div>
-    <div class = "panel-body"> .מייל נשלח לדוא"ל שהזנת, אנא בדוק את תיבת הדואר הנכנס ואפס את סיסמתך באמצעות הקישור המצורף<br> הנך מועבר לעמוד ההתחברות </div>
+<div *ngIf = "showMessage" class = "container">
+  <div class = "message">
+    <div class = "panel panel-warning text-right center">
+      <div class = "panel-heading"> איפוס סיסמה <i class = "fa fa-exclamation-triangle fa-2x pull-left" aria-hidden = "true"></i> </div>
+      <div class = "panel-body">
+        מייל נשלח לדוא"ל שהזנת, אנא בדוק את תיבת הדואר הנכנס ואפס את סיסמתך באמצעות הקישור המצורף
+        <br><br>
+        ..הנך מועבר לעמוד ההתחברות בעוד <strong> {{ countDown }} שניות </strong> 
+      </div>
+    </div>
   </div>
 </div>
+
+<!-- /Show message -->
+<!-- =========================================================================================================================== -->
