fixing message for forgot password

--- a/Mifalot-app/src/app/pages/forgot-password/forgot-password.component.html
+++ b/Mifalot-app/src/app/pages/forgot-password/forgot-password.component.html
@@ -51,8 +51,11 @@
     <div class = "panel panel-warning text-right center">
       <div class = "panel-heading"> איפוס סיסמה <i class = "fa fa-exclamation-triangle fa-2x pull-left" aria-hidden = "true"></i> </div>
       <div class = "panel-body">
-        מייל נשלח לדוא"ל שהזנת, אנא בדוק את תיבת הדואר הנכנס ואפס את סיסמתך באמצעות הקישור המצורף
-        <br><br>
+        <!--מייל נשלח לדוא"ל שהזנת, אנא בדוק את תיבת הדואר הנכנס ואפס את סיסמתך באמצעות הקישור המצורף-->
+        ברגע זה נשלח מייל לדוא"ל שהזנת, אנא בדוק את תיבת
+        <p>
+        .הדואר הנכנס ואפס את סיסמתך באמצעות הקישור המצורף
+        <p>
         ..הנך מועבר לעמוד ההתחברות בעוד <strong> {{ countDown }} שניות </strong> 
       </div>
     </div>
