Changing: block users to delete user

--- a/Mifalot-app/src/app/pages/deleted-users/deleted-users.component.html
+++ b/Mifalot-app/src/app/pages/deleted-users/deleted-users.component.html
@@ -60,7 +60,7 @@
                             </div>
                         </div>
                         <div class = "panel-footer">
-                            <a type = "button" class = "btn btn-sm btn-danger" (click) = "sendUserToConfirmation()"> בטל חסימה </a>
+                            <a type = "button" class = "btn btn-sm btn-danger" (click) = "sendUserToConfirmation()"> בטל מחיקה </a>
                         </div>
                     </div>
                 </div>
