--- a/Mifalot-app/src/app/pages/users-confirm/users-confirm.component.html
+++ b/Mifalot-app/src/app/pages/users-confirm/users-confirm.component.html
@@ -59,7 +59,7 @@
             </div>
             <div class = "panel-footer">
               <a type = "button" class = "btn btn-sm btn-success" (click) = "confirmUser()"> <i class = "glyphicon glyphicon-ok"></i> אשר </a>
-              <a type = "button" class = "btn btn-sm btn-danger" (click) = "blockUser()"> <i class = "glyphicon glyphicon-remove"></i> חסום </a>
+              <a type = "button" class = "btn btn-sm btn-danger" (click) = "deleteUser()"> <i class = "glyphicon glyphicon-remove"></i> הסר </a>
             </div>
           </div>
         </div>
