--- a/Mifalot-app/src/app/pages/users-management/users-management.component.html
+++ b/Mifalot-app/src/app/pages/users-management/users-management.component.html
@@ -49,7 +49,7 @@
 
         <!-- Note -->
         <div class = "alert alert-danger text-right" role = "alert">
-            <strong> שים לב:</strong> לאחר לחיצה על ״חסום״ המשתמש יחסם וכל הקבוצות שהיו רשומות תחתיו יתפנו
+            <strong> שים לב:</strong> לאחר לחיצה על ״הסר משתמש״ המשתמש יוסר מן המערכת וכל הקבוצות שהיו רשומות תחתיו יתפנו
         </div>
         <!-- /Note -->
         
@@ -88,7 +88,7 @@
                         </div>
                         <!-- Buttons -->
                         <div class = "panel-footer">
-                            <a type = "button" class = "btn btn-sm btn-danger" (click) = "blockUser()"> <i class = "glyphicon glyphicon-remove"></i> חסום </a>
+                            <a type = "button" class = "btn btn-sm btn-danger" (click) = "deleteUser()"> <i class = "glyphicon glyphicon-remove"></i> הסר משתמש </a>
                             <a type = "button" class = "btn btn-sm btn-info" (click) = "showTeams()"> <i class = "glyphicon glyphicon-plus"></i> שיוך קבוצות </a>
                         </div>
                     </div>
