Changing: block users to delete user

--- a/Mifalot-app/src/app/user-status/user-status.component.html
+++ b/Mifalot-app/src/app/user-status/user-status.component.html
@@ -14,8 +14,8 @@
 
   <div *ngIf = "permission == 5" class = "container confirm" >
       <div class = "panel panel-danger text-right center">
-        <div class = "panel-heading"> משתמש זה נחסם <i class = "fa fa-ban fa-2x pull-left" aria-hidden = "true"></i> </div>
-        <div class = "panel-body"> שים לב, משתמש זה נחסם ע״י מנהל מפעלות </div>
+        <div class = "panel-heading"> משתמש זה הוסר <i class = "fa fa-ban fa-2x pull-left" aria-hidden = "true"></i> </div>
+        <div class = "panel-body"> שים לב, משתמש זה הוסר ע״י מנהל מפעלות </div>
       </div>
 
   </div>
