Adding spinner to messages

--- a/Mifalot-app/src/app/pages/messages/messages.component.html
+++ b/Mifalot-app/src/app/pages/messages/messages.component.html
@@ -11,6 +11,8 @@
 <!-- ================================================================================================================================================ -->
 <!-- If user is a coach or manager -->
 
+<app-spinner [isLoading] = "isLoading"></app-spinner>
+
 <div *ngIf = "user.permission != 4 && user.permission !=5">
 
   <!-- Page header -->
