Adding spinner to reports

--- a/Mifalot-app/src/app/pages/reports/reports.component.html
+++ b/Mifalot-app/src/app/pages/reports/reports.component.html
@@ -18,8 +18,10 @@
 
 <!-- =========================================================================================================================== -->
 
+<app-spinner [isLoading] = "isLoading"></app-spinner>
+
 <!-- Page content -->
-<div class = "container">
+<div *ngIf = "!isLoading" class = "container">
 
 	<!-- Choose Team & Date buttons -->
 
