Adding spinner to pupils-management

--- a/Mifalot-app/src/app/pages/pupils-management/pupils-management.component.html
+++ b/Mifalot-app/src/app/pages/pupils-management/pupils-management.component.html
@@ -10,6 +10,8 @@
 
 <!-- ================================================================================================================================================ -->
 
+<app-spinner [isLoading] = "isLoading"></app-spinner>
+
 <div *ngIf = "user.permission != 4 && user.permission != 5">
 
     <!-- Page header -->
