- Adding spinner to admin - Fixing some bugs

--- a/Mifalot-app/src/app/pages/deleted-users/deleted-users.component.html
+++ b/Mifalot-app/src/app/pages/deleted-users/deleted-users.component.html
@@ -8,6 +8,11 @@
 <app-page-header [item] = "header"> </app-page-header>
 
 <!-- ================================================================================================================================================ -->
+
+<!-- Loading spinner -->
+<app-spinner [isLoading] = "isLoading"></app-spinner>
+
+<!-- ================================================================================================================================================ -->
 <!-- Select user -->
 
 <div class = "container">
