--- a/Mifalot-app/src/app/pages/registration/registration.component.html
+++ b/Mifalot-app/src/app/pages/registration/registration.component.html
@@ -85,7 +85,7 @@
       <br>
 
       <!-- Sign up button -->
-      <button class = "btn btn-md btn-primary btn-block" type = "submit"> הירשם </button>
+      <button class = "btn btn-md btn-success btn-block" type = "submit"> הירשם </button>
 
     </form>
 
