--- a/Mifalot-app/src/app/pages/users-confirm/users-confirm.component.html
+++ b/Mifalot-app/src/app/pages/users-confirm/users-confirm.component.html
@@ -8,6 +8,13 @@
 <!-- Page header -->
 <app-page-header [item] = "header"> </app-page-header>
 
+<!-- ================================================================================================================================================ -->
+
+<!-- Loading spinner -->
+<app-spinner [isLoading] = "isLoading"></app-spinner>
+
+<!-- ================================================================================================================================================ -->
+
 <!-- Page content -->
 <div class = "container" >
 
