--- a/Mifalot-app/src/app/pages/users-management/users-management.component.html
+++ b/Mifalot-app/src/app/pages/users-management/users-management.component.html
@@ -9,6 +9,11 @@
 <app-page-header [item] = "header"> </app-page-header>
 
 <!-- ================================================================================================================================================ -->
+
+<!-- Loading spinner -->
+<app-spinner [isLoading] = "isLoading"></app-spinner>
+
+<!-- ================================================================================================================================================ -->
 <!-- Show users -->
 
 <div class = "container">
