--- a/Mifalot-app/src/app/pages/messages/messages.component.html
+++ b/Mifalot-app/src/app/pages/messages/messages.component.html
@@ -124,6 +124,9 @@
           <button class = "btn btn-primary" type = "submit" (click) = "sendMessage()"> <i class = "fa fa-arrow-up"></i> שלח </button>
         </span>  
         <input type = "text" class = "form-control" id = "msg-input" placeholder = "כתוב את הודעתך כאן.." (keyup.enter) = "sendMessage()" [(ngModel)] = "newMessage">
+        <span class = "input-group-btn">
+          <button  class = "btn btn-default" type = "submit" (click) = "scrollToBottom()"><i class = "fa fa-angle-double-down" aria-hidden = "true"></i></button>
+        </span>
       </div>
 
       <!-- /Send message input -->
