--- a/Mifalot-app/src/app/pages/login/login.component.html
+++ b/Mifalot-app/src/app/pages/login/login.component.html
@@ -25,7 +25,7 @@
     <form class = "form-signin" (submit) = "loginWithEmail($event, email.value, password.value)">
       <label for = "email" class = "sr-only"> כתובת מייל </label>
       <div class = "input-group">
-        <input #email type = "email" id = "email" class = "form-control" placeholder = 'כתובת דוא״ל' value = 'guest@gmail.com'>
+        <input #email type = "email" id = "email" class = "form-control" placeholder = 'כתובת דוא״ל'>
         <span class = "input-group-addon"><i class = "fa fa-user"></i></span> 
       </div>
 
@@ -33,7 +33,7 @@
 
       <label for = "password" class = "sr-only"> סיסמה </label>
       <div class = "input-group">
-        <input #password type = "password" id = "password" class = "form-control" placeholder = "סיסמה" required = "" value = 'mifalot'>
+        <input #password type = "password" id = "password" class = "form-control" placeholder = "סיסמה" required>
         <span class = "input-group-addon"><i class = "fa fa-lock"> </i> </span>
       </div>
 
