Screen: pupils-management.css

--- a/Mifalot-app/src/app/pages/pupils-management/pupils-management.component.css
+++ b/Mifalot-app/src/app/pages/pupils-management/pupils-management.component.css
@@ -101,7 +101,7 @@ input
 {
     .vertical-menu 
     {
-        height: 2150px;
+        height: 2180px;
     }
 }
 
@@ -109,7 +109,7 @@ input
 {
     .vertical-menu 
     {
-        height: 960px;
+        height: 1000px;
     }
 }
 
@@ -117,7 +117,7 @@ input
 {
     .vertical-menu 
     {
-        height: 900px;
+        height: 950px;
     }
 }
 
@@ -125,7 +125,7 @@ input
 {
     .vertical-menu 
     {
-        height: 650px;
+        height: 690px;
     }
 }
 
@@ -133,7 +133,7 @@ input
 {
     .vertical-menu 
     {
-        height: 585px;
+        height: 625px;
     }
 }
 
@@ -141,7 +141,7 @@ input
 {
     .vertical-menu 
     {
-        height: 580px;
+        height: 620px;
     }
 }
 
@@ -149,7 +149,7 @@ input
 {
     .vertical-menu 
     {
-        height: 535px;
+        height: 570px;
     }
 }
 
@@ -157,7 +157,7 @@ input
 {
     .vertical-menu 
     {
-        height: 430px;
+        height: 470px;
     }
 }
 
@@ -165,7 +165,7 @@ input
 {
     .vertical-menu 
     {
-        height: 385px;
+        height: 420px;
     }
 }
 
@@ -173,7 +173,7 @@ input
 {
     .vertical-menu 
     {
-        height: 380px;
+        height: 420px;
     }
 }
 
@@ -181,7 +181,7 @@ input
 {
     .vertical-menu 
     {
-        height: 330px;
+        height: 350px;
     }
 }
 
@@ -189,7 +189,7 @@ input
 {
     .vertical-menu 
     {
-        height: 280px;
+        height: 325px;
     }
 }
 
@@ -197,7 +197,7 @@ input
 {
     .vertical-menu 
     {
-        height: 220px;
+        height: 250px;
         font-size: 80%;
     }
 }
@@ -206,6 +206,22 @@ input
 {
     .vertical-menu 
     {
-        height: 155px;
+        height: 214px;
+    }
+}
+
+@media only screen and (max-height: 480px)
+{
+    .vertical-menu 
+    {
+        height: 170px;
+    }
+}
+
+@media only screen and (max-height: 360px)
+{
+    .vertical-menu 
+    {
+        height: 55px;
     }
 }
