--- a/Mifalot-app/src/app/pages/teams-management/teams-management.component.html
+++ b/Mifalot-app/src/app/pages/teams-management/teams-management.component.html
@@ -9,10 +9,15 @@
 <app-user-status *ngIf = "user.permission == 4 || user.permission == 5" [permission] = "user.permission"></app-user-status>
 
 <!-- ================================================================================================================================================ -->
+<!-- User is not allow to access to this page, permission: 0 - navigate to home -->
+
+<app-user-status *ngIf = "user.permission != 4 && user.permission != 5 && user.permission != 1" [permission] = "0" (onNavigate) = "unsubscribeAll()"></app-user-status>
+
+<!-- ================================================================================================================================================ -->
 
 <app-spinner [isLoading] = "isLoading"></app-spinner>
 
-<div *ngIf = "user.permission != 4 && user.permission != 5">
+<div *ngIf = "user.permission == 1">
 
     <!-- Page header -->
     <app-page-header [item] = "header"> </app-page-header>
