--- a/Mifalot-app/src/app/pages/users-confirm/users-confirm.component.html
+++ b/Mifalot-app/src/app/pages/users-confirm/users-confirm.component.html
@@ -4,7 +4,16 @@
 <app-nav-header [backButton] = "backButton" (onUserClicked) = "navigate()" (onUserLogout) = "unsubscribeAll()"></app-nav-header>
 
 <!-- ================================================================================================================================================ -->
+<!-- User wait for admin to confirm him OR user was blocked by admin -->
 
+<app-user-status *ngIf = "currentUser.permission == 4 || currentUser.permission == 5" [permission] = "currentUser.permission"></app-user-status>
+
+<!-- ================================================================================================================================================ -->
+<!-- User is not allow to access to this page, permission: 0 - navigate to home -->
+
+<app-user-status *ngIf = "currentUser.permission != 4 && currentUser.permission != 5 && currentUser.permission != 1" [permission] = "0" (onNavigate) = "unsubscribeAll()"></app-user-status>
+
+<!-- ================================================================================================================================================ -->
 <!-- Page header -->
 <app-page-header [item] = "header"> </app-page-header>
 
