--- a/Mifalot-app/src/app/pages/attendance/attendance.component.html
+++ b/Mifalot-app/src/app/pages/attendance/attendance.component.html
@@ -9,8 +9,13 @@
 <app-user-status *ngIf = "user.permission == 4 || user.permission == 5" [permission] = "user.permission"></app-user-status>
 
 <!-- ================================================================================================================================================ -->
+<!-- User is not allow to access to this page, permission: 0 - navigate to home -->
 
-<div *ngIf = "user.permission != 4 && user.permission != 5">
+<app-user-status *ngIf = "user.permission != 4 && user.permission != 5 && user.permission != 3" [permission] = "0" (onNavigate) = "unsubscribeAll()"></app-user-status>
+
+<!-- ================================================================================================================================================ -->
+
+<div *ngIf = "user.permission == 3">
 
 <!-- Page Header -->
 <app-page-header [item] = "header"> </app-page-header>
