--- a/Mifalot-app/src/app/pages/reports/reports.component.html
+++ b/Mifalot-app/src/app/pages/reports/reports.component.html
@@ -10,6 +10,11 @@
 <app-user-status *ngIf = "user.permission == 4 || user.permission == 5" [permission] = "user.permission"></app-user-status>
 
 <!-- ================================================================================================================================================ -->
+<!-- User is not allow to access to this page, permission: 0 - navigate to home -->
+
+<app-user-status *ngIf = "user.permission != 4 && user.permission != 5 && user.permission != 2 && user.permission != 3" [permission] = "0" (onNavigate) = "unsubscribeAll()"></app-user-status>
+
+<!-- ================================================================================================================================================ -->
 
 <div *ngIf = "user.permission != 4 && user.permission != 5">
 
