--- a/Mifalot-app/src/app/pages/attendance/attendance.component.html
+++ b/Mifalot-app/src/app/pages/attendance/attendance.component.html
@@ -44,34 +44,38 @@
 
     <!-- ======================== -->
     <!--checklist-->
-    
-    <h4 class = "title text-center"> :לחץ על שמות החניכים הנוכחים באימון </h4>
-  
-    <div class = "vertical-menu">
-      <div *ngFor = "let pupil of pupils">
-        <div class = "toggle-button toggle-button--vesi">
-            <input id = "{{ pupil.ID }}" type = "checkbox" (click) = "updateChecked(pupil, $event)" [checked] = "pupil.presence">
-            <label for = "{{ pupil.ID }}"> {{ pupil.name }} {{ pupil.lastName }} - {{pupil.ID}}</label>
-            <div class = "toggle-button__icon"></div>
+    <div *ngIf = "(pupils)?.length == 0" class = "alert alert-warning text-center" role = "alert">
+      <strong> אין כרגע חניכים בקבוצה </strong> <br> עליך להוסיף חניכים ורק לאחר מכן לסמן נוכחות 
+    </div>
+
+    <div *ngIf = "(pupils)?.length > 0">
+      <h4 class = "title text-center"> :לחץ על שמות החניכים הנוכחים באימון </h4>
+      
+      <div class = "vertical-menu">
+        <div *ngFor = "let pupil of pupils">
+          <div class = "toggle-button toggle-button--vesi">
+              <input id = "{{ pupil.ID }}" type = "checkbox" (click) = "updateChecked(pupil, $event)" [checked] = "pupil.presence">
+              <label for = "{{ pupil.ID }}"> {{ pupil.name }} {{ pupil.lastName }} - {{pupil.ID}}</label>
+              <div class = "toggle-button__icon"></div>
+          </div>
         </div>
       </div>
+
+      <!-- ======================== -->
+      <!-- buttons -->
+
+      <div class = "col-lg-6 col-md-6 col-xs-6 thumb">
+        <span class = "btn-bottom" (click) = "saveAttendance()"> 
+          <button type = "button" class = "btn btn-primary btn-block" > שליחת טופס </button>
+        </span>
+      </div>
+
+      <div class = "col-lg-6 col-md-6 col-xs-6 thumb">
+        <span class = "btn-bottom" (click) = "startOver()"> 
+          <button type = "button" class = "btn btn-danger btn-block" > איפוס טופס </button>
+        </span>
+      </div>
     </div>
-
-    <!-- ======================== -->
-    <!-- buttons -->
-
-    <div class = "col-lg-6 col-md-6 col-xs-6 thumb">
-      <span class = "btn-bottom" (click) = "saveAttendance()"> 
-        <button type = "button" class = "btn btn-primary btn-block" > שליחת טופס </button>
-      </span>
-    </div>
-
-    <div class = "col-lg-6 col-md-6 col-xs-6 thumb">
-      <span class = "btn-bottom" (click) = "startOver()"> 
-        <button type = "button" class = "btn btn-danger btn-block" > איפוס טופס </button>
-      </span>
-    </div>
-
   </div>
   <!-- /After selected team -->
 
