Screen: teams-management.css

--- a/Mifalot-app/src/app/pages/pupils-management/pupils-management.component.css
+++ b/Mifalot-app/src/app/pages/pupils-management/pupils-management.component.css
@@ -216,6 +216,12 @@ input
     {
         height: 170px;
     }
+
+    hr
+    {
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
 }
 
 @media only screen and (max-height: 360px)
